--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
+    "@angular-devkit/build-angular": "12.1.3",
     "@angular-eslint/builder": "12.3.1",
     "@angular-eslint/eslint-plugin": "12.3.1",
     "@angular-eslint/eslint-plugin-template": "12.3.1",
     "@angular-eslint/schematics": "12.3.1",
     "@angular-eslint/template-parser": "12.3.1",
-    "@angular/cli": "12.1.2",
-    "@angular/compiler-cli": "12.1.2",
+    "@angular/cli": "12.1.3",
+    "@angular/compiler-cli": "12.1.3",
     "@commitlint/cli": "12.1.4",
     "@commitlint/config-conventional": "12.1.4",
     "@ng-apimock/base-client": "3.0.0",
@@ -87,10 +87,10 @@
     "jest": "27.0.6",
     "jest-createspyobj": "2.0.0",
     "jest-preset-angular": "9.0.4",
-    "lint-staged": "11.0.1",
+    "lint-staged": "11.1.0",
     "p-iteration": "1.1.8",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "6.2.1",
+    "protractor-cucumber-framework": "8.2.1",
     "rimraf": "3.0.2",
     "semantic-release": "17.4.4",
     "serve-static": "1.14.1",
@@ -99,18 +99,28 @@
     "wait-on": "6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "12.1.2",
+    "@angular/animations": "12.1.3",
     "@angular/cdk": "12.1.3",
-    "@angular/common": "12.1.2",
-    "@angular/compiler": "12.1.2",
-    "@angular/core": "12.1.2",
-    "@angular/forms": "12.1.2",
+    "@angular/common": "12.1.3",
+    "@angular/compiler": "12.1.3",
+    "@angular/core": "12.1.3",
+    "@angular/forms": "12.1.3",
     "@angular/material": "12.1.3",
-    "@angular/platform-browser": "12.1.2",
-    "@angular/platform-browser-dynamic": "12.1.2",
-    "@angular/router": "12.1.2",
+    "@angular/platform-browser": "12.1.3",
+    "@angular/platform-browser-dynamic": "12.1.3",
+    "@angular/router": "12.1.3",
     "rxjs": "7.2.0",
     "tslib": "2.3.0",
     "zone.js": "~0.11.4"
+  },
+  "lint-staged": {
+    "**/**.{ts}": [
+      "eslint --fix"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
