--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/theme.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
