--- a/package.json
+++ b/package.json
@@ -50,67 +50,65 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.3",
-    "@angular-eslint/builder": "12.3.1",
-    "@angular-eslint/eslint-plugin": "12.3.1",
-    "@angular-eslint/eslint-plugin-template": "12.3.1",
-    "@angular-eslint/schematics": "12.3.1",
-    "@angular-eslint/template-parser": "12.3.1",
-    "@angular/cli": "12.1.3",
-    "@angular/compiler-cli": "12.1.3",
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
+    "@angular-devkit/build-angular": "13.0.1",
+    "@angular-eslint/builder": "12.6.1",
+    "@angular-eslint/eslint-plugin": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "12.6.1",
+    "@angular-eslint/schematics": "12.6.1",
+    "@angular-eslint/template-parser": "12.6.1",
+    "@angular/cli": "13.0.1",
+    "@angular/compiler-cli": "13.0.0",
+    "@commitlint/cli": "14.1.0",
+    "@commitlint/config-conventional": "14.1.0",
     "@ng-apimock/base-client": "3.1.0",
-    "@ng-apimock/core": "3.0.3",
+    "@ng-apimock/core": "3.2.0",
     "@ng-apimock/protractor-plugin": "2.0.0",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "7.2.3",
-    "@semantic-release/npm": "7.1.3",
-    "@semantic-release/release-notes-generator": "9.0.3",
-    "@types/chai": "4.2.21",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/commit-analyzer": "9.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "8.0.2",
+    "@semantic-release/npm": "8.0.3",
+    "@semantic-release/release-notes-generator": "10.0.2",
+    "@types/chai": "4.2.22",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "26.0.24",
-    "@types/node": "16.4.5",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.6",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
     "commitizen": "4.2.4",
-    "connect": "3.7.0",
-    "connect-modrewrite": "0.10.2",
     "cucumber": "6.0.5",
-    "eslint": "7.31.0",
-    "husky": "7.0.1",
-    "jest": "27.0.6",
+    "eslint": "8.2.0",
+    "express": "4.17.1",
+    "husky": "7.0.4",
+    "jest": "27.3.1",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "9.0.5",
-    "lint-staged": "11.1.1",
+    "jest-preset-angular": "10.1.0",
+    "lint-staged": "11.2.6",
     "p-iteration": "1.1.8",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "8.2.2",
+    "protractor-cucumber-framework": "8.2.7",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.4",
-    "serve-static": "1.14.1",
-    "ts-node": "10.1.0",
-    "typescript": "4.3.5",
+    "semantic-release": "18.0.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.4.4",
     "wait-on": "6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "12.1.3",
-    "@angular/cdk": "12.1.3",
-    "@angular/common": "12.1.3",
-    "@angular/compiler": "12.1.3",
-    "@angular/core": "12.1.3",
-    "@angular/forms": "12.1.3",
-    "@angular/material": "12.1.3",
-    "@angular/platform-browser": "12.1.3",
-    "@angular/platform-browser-dynamic": "12.1.3",
-    "@angular/router": "12.1.3",
-    "rxjs": "7.2.0",
-    "tslib": "2.3.0",
+    "@angular/animations": "13.0.0",
+    "@angular/cdk": "13.0.0",
+    "@angular/common": "13.0.0",
+    "@angular/compiler": "13.0.0",
+    "@angular/core": "13.0.0",
+    "@angular/forms": "13.0.0",
+    "@angular/material": "13.0.0",
+    "@angular/platform-browser": "13.0.0",
+    "@angular/platform-browser-dynamic": "13.0.0",
+    "@angular/router": "13.0.0",
+    "rxjs": "7.4.0",
+    "tslib": "2.3.1",
     "zone.js": "~0.11.4"
   },
   "lint-staged": {
