--- a/package.json
+++ b/package.json
@@ -73,14 +73,14 @@
     "@types/cucumber": "6.0.1",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.6",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
     "commitizen": "4.2.4",
     "cucumber": "6.0.5",
-    "eslint": "^8.1.0",
+    "eslint": "8.2.0",
     "express": "4.17.1",
     "husky": "7.0.4",
     "jest": "27.3.1",
