--- a/package.json
+++ b/package.json
@@ -51,6 +51,16 @@
     "recording"
   ],
   "devDependencies": {
+    "@angular/animations": "13.2.0",
+    "@angular/cdk": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/forms": "13.2.0",
+    "@angular/material": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
+    "@angular/platform-browser-dynamic": "13.2.0",
+    "@angular/router": "13.2.0",
     "@angular-devkit/build-angular": "13.2.0",
     "@angular-eslint/builder": "13.0.1",
     "@angular-eslint/eslint-plugin": "13.0.1",
@@ -92,24 +102,12 @@
     "protractor": "7.0.0",
     "protractor-cucumber-framework": "8.2.11",
     "rimraf": "3.0.2",
+    "rxjs": "7.5.2",
     "semantic-release": "19.0.2",
+    "tslib": "2.3.1",
     "ts-node": "10.4.0",
     "typescript": "4.5.5",
-    "wait-on": "6.0.0"
-  },
-  "dependencies": {
-    "@angular/animations": "13.2.0",
-    "@angular/cdk": "13.2.0",
-    "@angular/common": "13.2.0",
-    "@angular/compiler": "13.2.0",
-    "@angular/core": "13.2.0",
-    "@angular/forms": "13.2.0",
-    "@angular/material": "13.2.0",
-    "@angular/platform-browser": "13.2.0",
-    "@angular/platform-browser-dynamic": "13.2.0",
-    "@angular/router": "13.2.0",
-    "rxjs": "7.5.2",
-    "tslib": "2.3.1",
+    "wait-on": "6.0.0",
     "zone.js": "~0.11.4"
   },
   "lint-staged": {
