--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/theme.scss"
+              "@angular/material/prebuilt-themes/purple-green.css",
+              "src/style.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
