--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "ng": "ng",
-    "ngapimock": "node test/server.js",
+    "ngapimock": "node test/serve.js",
     "prebuild": "rimraf dist",
     "build": "ng build --configuration=production",
     "lint": "ng lint",
@@ -51,64 +51,64 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular/animations": "13.2.0",
-    "@angular/cdk": "13.2.0",
-    "@angular/common": "13.2.0",
-    "@angular/compiler": "13.2.0",
-    "@angular/core": "13.2.0",
-    "@angular/forms": "13.2.0",
-    "@angular/material": "13.2.0",
-    "@angular/platform-browser": "13.2.0",
-    "@angular/platform-browser-dynamic": "13.2.0",
-    "@angular/router": "13.2.0",
-    "@angular-devkit/build-angular": "13.2.0",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.2.0",
-    "@angular/compiler-cli": "13.2.0",
-    "@commitlint/cli": "16.1.0",
-    "@commitlint/config-conventional": "16.0.0",
-    "@ng-apimock/base-client": "3.1.0",
-    "@ng-apimock/core": "3.4.0",
-    "@ng-apimock/protractor-plugin": "2.0.0",
-    "@semantic-release/changelog": "6.0.1",
+    "@angular/animations": "15.0.3",
+    "@angular/cdk": "15.0.3",
+    "@angular/common": "15.0.3",
+    "@angular/compiler": "15.0.3",
+    "@angular/core": "15.0.3",
+    "@angular/forms": "15.0.3",
+    "@angular/material": "15.0.3",
+    "@angular/platform-browser": "15.0.3",
+    "@angular/platform-browser-dynamic": "15.0.3",
+    "@angular/router": "15.0.3",
+    "@angular-devkit/build-angular": "15.0.3",
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "15.0.3",
+    "@angular/compiler-cli": "15.0.3",
+    "@commitlint/cli": "17.3.0",
+    "@commitlint/config-conventional": "17.3.0",
+    "@ng-apimock/base-client": "3.3.0",
+    "@ng-apimock/core": "3.6.0",
+    "@ng-apimock/protractor-plugin": "2.1.0",
+    "@semantic-release/changelog": "6.0.2",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.0.2",
-    "@semantic-release/npm": "9.0.0",
+    "@semantic-release/github": "8.0.7",
+    "@semantic-release/npm": "9.0.1",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/chai": "4.3.0",
+    "@types/chai": "4.3.4",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "27.4.0",
-    "@types/node": "17.0.13",
-    "@typescript-eslint/eslint-plugin": "5.10.1",
-    "@typescript-eslint/parser": "5.10.1",
+    "@types/jest": "29.2.4",
+    "@types/node": "18.11.12",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
     "angular2-prettyjson": "3.0.1",
-    "body-parser": "1.19.1",
-    "chai": "4.3.6",
-    "commitizen": "4.2.4",
+    "body-parser": "1.20.1",
+    "chai": "4.3.7",
+    "commitizen": "4.2.6",
     "cucumber": "6.0.5",
-    "eslint": "8.8.0",
-    "express": "4.17.2",
-    "husky": "7.0.4",
-    "jest": "27.4.7",
+    "eslint": "8.29.0",
+    "express": "4.18.2",
+    "husky": "8.0.2",
+    "jest": "29.3.1",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "11.1.0",
-    "lint-staged": "12.3.2",
+    "jest-preset-angular": "12.2.3",
+    "lint-staged": "13.1.0",
     "p-iteration": "1.1.8",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "8.2.11",
+    "protractor-cucumber-framework": "8.4.4",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.2",
-    "semantic-release": "19.0.2",
-    "tslib": "2.3.1",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.5",
-    "wait-on": "6.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "7.6.0",
+    "semantic-release": "19.0.5",
+    "tslib": "2.4.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4",
+    "wait-on": "6.0.1",
+    "zone.js": "~0.12.0"
   },
   "lint-staged": {
     "**/**.{ts}": [
