--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ngapimock": "node test/serve.js",
     "prebuild": "rimraf dist",
     "build": "ng build --configuration=production",
+    "postbuild": "mv dist/browser/* dist && rimraf dist/browser",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "test": "jest --config=jest.config.js -w 1",
@@ -51,62 +52,62 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular/animations": "17.0.3",
+    "@angular/animations": "17.0.5",
     "@angular/cdk": "17.0.1",
-    "@angular/common": "17.0.3",
-    "@angular/compiler": "17.0.3",
-    "@angular/core": "17.0.3",
-    "@angular/forms": "17.0.3",
+    "@angular/common": "17.0.5",
+    "@angular/compiler": "17.0.5",
+    "@angular/core": "17.0.5",
+    "@angular/forms": "17.0.5",
     "@angular/material": "17.0.1",
-    "@angular/platform-browser": "17.0.3",
-    "@angular/platform-browser-dynamic": "17.0.3",
-    "@angular/router": "17.0.3",
-    "@angular-devkit/build-angular": "17.0.1",
+    "@angular/platform-browser": "17.0.5",
+    "@angular/platform-browser-dynamic": "17.0.5",
+    "@angular/router": "17.0.5",
+    "@angular-devkit/build-angular": "17.0.4",
     "@angular-eslint/builder": "17.1.0",
     "@angular-eslint/eslint-plugin": "17.1.0",
     "@angular-eslint/eslint-plugin-template": "17.1.0",
     "@angular-eslint/schematics": "17.1.0",
     "@angular-eslint/template-parser": "17.1.0",
-    "@angular/cli": "17.0.1",
-    "@angular/compiler-cli": "17.0.3",
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
+    "@angular/cli": "17.0.4",
+    "@angular/compiler-cli": "17.0.5",
+    "@commitlint/cli": "17.8.1",
+    "@commitlint/config-conventional": "17.8.1",
     "@ng-apimock/base-client": "3.3.1",
-    "@ng-apimock/core": "3.6.1",
+    "@ng-apimock/core": "3.11.2",
     "@ng-apimock/protractor-plugin": "2.1.1",
-    "@semantic-release/changelog": "6.0.2",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.0.7",
+    "@semantic-release/github": "8.1.0",
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/chai": "4.3.4",
+    "@types/chai": "4.3.11",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "29.5.8",
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "body-parser": "1.20.1",
-    "chai": "4.3.7",
-    "commitizen": "4.2.6",
+    "@types/jest": "29.5.10",
+    "@types/node": "18.18.14",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "body-parser": "1.20.2",
+    "chai": "4.3.10",
+    "commitizen": "4.3.0",
     "cucumber": "6.0.5",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "express": "4.18.2",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-createspyobj": "2.0.0",
     "jest-preset-angular": "13.1.4",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.3.0",
     "p-iteration": "1.1.8",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "9.0.0",
-    "rimraf": "4.0.6",
-    "rxjs": "7.8.0",
-    "semantic-release": "20.0.2",
-    "tslib": "2.4.1",
+    "protractor-cucumber-framework": "9.9.0",
+    "rimraf": "4.4.1",
+    "rxjs": "7.8.1",
+    "semantic-release": "20.1.3",
+    "tslib": "2.6.2",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "wait-on": "7.0.1",
+    "typescript": "5.3.2",
+    "wait-on": "7.2.0",
     "zone.js": "~0.14.2"
   },
   "lint-staged": {
