--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,7 +25,7 @@ jobs:
       - name: integration test
         uses: cypress-io/github-action@v5
         with:
-          start: yarn start
+          start: yarn ngapimock
           wait-on: 'http://localhost:9999'
           browser: chrome
         env:
