--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -26,7 +26,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           start: yarn ngapimock
-          wait-on: 'http://localhost:9999'
+          wait-on: 'http://localhost:9999/dev-interface'
           browser: chrome
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
