--- a/package.json
+++ b/package.json
@@ -48,65 +48,65 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.4",
-    "@angular-eslint/builder": "17.1.0",
-    "@angular-eslint/eslint-plugin": "17.1.0",
-    "@angular-eslint/eslint-plugin-template": "17.1.0",
-    "@angular-eslint/schematics": "17.1.0",
-    "@angular-eslint/template-parser": "17.1.0",
-    "@angular/animations": "17.0.5",
-    "@angular/cdk": "17.0.1",
-    "@angular/cli": "17.0.4",
-    "@angular/common": "17.0.5",
-    "@angular/compiler": "17.0.5",
-    "@angular/compiler-cli": "17.0.5",
-    "@angular/core": "17.0.5",
-    "@angular/forms": "17.0.5",
-    "@angular/material": "17.0.1",
-    "@angular/platform-browser": "17.0.5",
-    "@angular/platform-browser-dynamic": "17.0.5",
-    "@angular/router": "17.0.5",
-    "@badeball/cypress-cucumber-preprocessor": "^19.2.0",
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
-    "@commitlint/cli": "17.8.1",
-    "@commitlint/config-conventional": "17.8.1",
+    "@angular-devkit/build-angular": "17.3.3",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/animations": "17.3.3",
+    "@angular/cdk": "17.3.3",
+    "@angular/cli": "17.3.3",
+    "@angular/common": "17.3.3",
+    "@angular/compiler": "17.3.3",
+    "@angular/compiler-cli": "17.3.3",
+    "@angular/core": "17.3.3",
+    "@angular/forms": "17.3.3",
+    "@angular/material": "17.3.3",
+    "@angular/platform-browser": "17.3.3",
+    "@angular/platform-browser-dynamic": "17.3.3",
+    "@angular/router": "17.3.3",
+    "@badeball/cypress-cucumber-preprocessor": "20.0.3",
+    "@bahmutov/cypress-esbuild-preprocessor": "2.2.0",
+    "@commitlint/cli": "19.2.1",
+    "@commitlint/config-conventional": "19.1.0",
     "@ng-apimock/base-client": "3.3.1",
-    "@ng-apimock/core": "3.11.2",
+    "@ng-apimock/core": "3.12.0",
     "@ng-apimock/cypress-plugin": "^3.0.0",
     "@ng-apimock/protractor-plugin": "2.1.1",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "9.0.2",
+    "@semantic-release/commit-analyzer": "12.0.0",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.1.0",
-    "@semantic-release/npm": "9.0.2",
-    "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/chai": "4.3.11",
+    "@semantic-release/github": "10.0.3",
+    "@semantic-release/npm": "12.0.0",
+    "@semantic-release/release-notes-generator": "13.0.0",
+    "@types/chai": "4.3.14",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "29.5.10",
-    "@types/node": "18.18.14",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.12.5",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
     "body-parser": "1.20.2",
-    "chai": "4.3.10",
+    "chai": "5.1.0",
     "commitizen": "4.3.0",
     "cucumber": "6.0.5",
-    "cypress": "13.6.0",
-    "eslint": "^8.54.0",
-    "express": "4.18.2",
-    "husky": "8.0.3",
+    "cypress": "13.7.2",
+    "eslint": "8.57.0",
+    "express": "4.19.2",
+    "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "13.1.4",
-    "lint-staged": "13.3.0",
+    "jest-preset-angular": "14.0.3",
+    "lint-staged": "15.2.2",
     "p-iteration": "1.1.8",
-    "rimraf": "4.4.1",
+    "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "semantic-release": "20.1.3",
-    "ts-node": "10.9.1",
+    "semantic-release": "23.0.7",
+    "ts-node": "10.9.2",
     "tslib": "2.6.2",
-    "typescript": "5.3.2",
+    "typescript": "5.4.4",
     "wait-on": "7.2.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "0.14.4"
   },
   "lint-staged": {
     "**/**.{ts}": [
