--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
   ],
   "devDependencies": {
     "@angular-devkit/build-angular": "17.3.3",
-    "@angular-eslint/builder": "17.5.1",
-    "@angular-eslint/eslint-plugin": "17.5.1",
-    "@angular-eslint/eslint-plugin-template": "17.5.1",
-    "@angular-eslint/schematics": "17.5.1",
-    "@angular-eslint/template-parser": "17.5.1",
+    "@angular-eslint/builder": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.0-alpha.1",
+    "@angular-eslint/schematics": "18.0.0-alpha.1",
+    "@angular-eslint/template-parser": "18.0.0-alpha.1",
     "@angular/animations": "17.3.3",
     "@angular/cdk": "17.3.3",
     "@angular/cli": "17.3.3",
