--- a/package.json
+++ b/package.json
@@ -48,24 +48,24 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.3",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/animations": "17.3.3",
+    "@angular-eslint/builder": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.0-alpha.1",
+    "@angular-eslint/schematics": "18.0.0-alpha.1",
+    "@angular-eslint/template-parser": "18.0.0-alpha.1",
+    "@angular/animations": "18.0.0",
+    "@angular/build": "^18.0.1",
     "@angular/cdk": "17.3.3",
-    "@angular/cli": "17.3.3",
-    "@angular/common": "17.3.3",
-    "@angular/compiler": "17.3.3",
-    "@angular/compiler-cli": "17.3.3",
-    "@angular/core": "17.3.3",
-    "@angular/forms": "17.3.3",
+    "@angular/cli": "18.0.1",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/compiler-cli": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/forms": "18.0.0",
     "@angular/material": "17.3.3",
-    "@angular/platform-browser": "17.3.3",
-    "@angular/platform-browser-dynamic": "17.3.3",
-    "@angular/router": "17.3.3",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
     "@badeball/cypress-cucumber-preprocessor": "20.0.3",
     "@bahmutov/cypress-esbuild-preprocessor": "2.2.0",
     "@commitlint/cli": "19.2.1",
@@ -96,7 +96,7 @@
     "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "14.0.3",
+    "jest-preset-angular": "14.1.0",
     "lint-staged": "15.2.2",
     "p-iteration": "1.1.8",
     "rimraf": "5.0.5",
